# rusty-snn

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md  network.json  notebook.ipynb  notes.md
examples/: example1.rs
experiments/: best.txt  high_slope.txt  low_slope.txt  mid_slope.txt
src/: alpha.rs  comparator.rs  connection.rs  core.rs  error.rs  jitter.rs  lib.rs  main.rs  network.rs  neuron.rs  optim.rs  optimizer.rs  programs.rs  sampler.rs  signal.rs  sim.rs  simulator.rs  snn.rs  spike_train.rs  utils.rs
src/alpha/: metrics.rs  network.rs  neuron.rs  utils.rs
src/core/: connection.rs  error.rs  metrics.rs  network.rs  neuron.rs  optim.rs  spike.rs  spike_train.rs  spikes.rs  utils.rs
src/network/: _tmp.rs  builder.rs  connection.rs  error.rs  input.rs  kernel.rs  network.rs  neuron.rs  sampler.rs
src/optimizer/: optimizer.rs
src/sampler/: network.rs  spike_train.rs
src/signals/: signals.rs
src/sim/: sim.rs
src/simulator/: comparator.rs  simulator.rs
src/snn/: connection.rs  input.rs  network.rs  neuron.rs  sampler.rs
src/spike_train/: comparator.rs  error.rs  measure.rs  metrics.rs  rand.rs  sampler.rs  spike_train.rs  utils.rs
src/utils/: comparator.rs  memorizer.rs  types.rs
tests/: optim_test.rs
