[package]
name = "rusty_snn"
version = "0.1.0"
edition = "2021"
description = "A spiking neural network library written in Rust for research purposes."
license = "MIT OR Apache-2.0"
authors = ["Hugo Aguettaz <aguettaz@isi.ee.ethz.ch>"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
derivative = "2.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
itertools = "0.14"
tempfile = "3.15"
embed-doc-image = "0.1"
lambert_w = "1.0.12"
rayon = "1.5"
grb = "2.0.3"
approx = "0.5.1"
log = "0.4"
env_logger="0.11.6"
clap = { version = "4.0", features = ["derive"] }
