[package]
name = "rusty_snn"
version = "0.0.1"
edition = "2021"
description = "A spiking neural network library written in Rust for research purposes."
license = "MIT OR Apache-2.0"
authors = ["Hugo Aguettaz <aguettaz@isi.ee.ethz.ch>"]

[dependencies]
rand = "0.9"
rand_distr = { version = "0.5.0", features = ["serde"] }
rand_chacha = "0.9.0"
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
itertools = "0.14"
tempfile = "3.16"
embed-doc-image = "0.1.4"
lambert_w = "1.0.14"
rayon = "1.5"
grb = { version = "3.0.1", features = ["gurobi11"] }
approx = "0.5.1"
log = "0.4.25"
log4rs = "1.3.0"
env_logger = "0.11.6"
clap = { version = "4.5.29", features = ["derive"] }
sorted-vec = "0.8"
faer = "0.21.3"
sha2 = "0.10.8"
