[package]
name = "rusty_snn"
version = "0.0.1"
edition = "2021"
description = "A spiking neural network library written in Rust for research purposes."
license = "MIT OR Apache-2.0"
authors = ["Hugo Aguettaz <aguettaz@isi.ee.ethz.ch>"]

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.30", features = ["derive"] }
derivative = "2.2"
embed-doc-image = "0.1.4"
env_logger = "0.11.6"
faer = "0.21.3"
flate2 = "1.0.28"
grb = { version = "3.0.1", features = ["gurobi11"] }
itertools = "0.14"
lambert_w = "1.0.17"
lazy_static = "1.4.0"
log = "0.4.25"
log4rs = "1.3.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.17"
rand = "0.9"
rand_distr = { version = "0.5.0", features = ["serde"] }
rand_chacha = "0.9.0"
GSL = "4.0.0"
rtnorm-rust = "0.1.0"
sha2 = "0.10.8"